--- a/client/app/app.html
+++ b/client/app/app.html
@@ -14,6 +14,12 @@
         }
       }());
     </script>
+	<style>
+		body {
+			padding: 0px;
+			margin: 0px
+		}
+	</style>
   </head>
   <body>
     <div id="root"></div>
