--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <div id="content">
-      <script src="bundle.js"></script>
+      <script src="http://localhost:8080/built/bundle.js"></script>
     </div>
   </body>
 </html>
